kong/kong-kong_deployments.apps.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: kong-kong
  namespace: default
spec:
  progressDeadlineSeconds: 600
  replicas: 1
  revisionHistoryLimit: 10
  selector:
    matchLabels:
      app.kubernetes.io/component: app
      app.kubernetes.io/instance: kong
      app.kubernetes.io/name: kong
  strategy:
    rollingUpdate:
      maxSurge: 25%
      maxUnavailable: 25%
    type: RollingUpdate
  template:
    metadata:
      labels:
        app.kubernetes.io/component: app
        app.kubernetes.io/instance: kong
        app.kubernetes.io/managed-by: Helm
        app.kubernetes.io/name: kong
        app.kubernetes.io/version: "2.1"
        helm.sh/chart: kong-1.11.0
    spec:
      containers:
      - env:
        - name: KONG_ADMIN_ACCESS_LOG
          value: /dev/stdout
        - name: KONG_ADMIN_ERROR_LOG
          value: /dev/stderr
        - name: KONG_ADMIN_GUI_ACCESS_LOG
          value: /dev/stdout
        - name: KONG_ADMIN_GUI_ERROR_LOG
          value: /dev/stderr
        - name: KONG_ADMIN_LISTEN
          value: 0.0.0.0:8001
        - name: KONG_CLUSTER_LISTEN
          value: "off"
        - name: KONG_DATABASE
          value: postgres
        - name: KONG_LUA_PACKAGE_PATH
          value: /opt/?.lua;/opt/?/init.lua;;
        - name: KONG_NGINX_HTTP_INCLUDE
          value: /kong/servers.conf
        - name: KONG_NGINX_WORKER_PROCESSES
          value: "1"
        - name: KONG_PG_HOST
          value: kong-postgresql
        - name: KONG_PG_PASSWORD
          valueFrom:
            secretKeyRef:
              key: postgresql-password
              name: kong-postgresql
        - name: KONG_PG_PORT
          value: "5432"
        - name: KONG_PLUGINS
          value: bundled,base64-decode,method-rewrite,header-filter
        - name: KONG_PORTAL_API_ACCESS_LOG
          value: /dev/stdout
        - name: KONG_PORTAL_API_ERROR_LOG
          value: /dev/stderr
        - name: KONG_PORT_MAPS
          value: 80:8000, 443:8443
        - name: KONG_PREFIX
          value: /kong_prefix/
        - name: KONG_PROXY_ACCESS_LOG
          value: /dev/stdout
        - name: KONG_PROXY_ERROR_LOG
          value: /dev/stderr
        - name: KONG_PROXY_LISTEN
          value: 0.0.0.0:8000, 0.0.0.0:8443 http2 ssl
        - name: KONG_STATUS_LISTEN
          value: 0.0.0.0:8100
        - name: KONG_STREAM_LISTEN
          value: "off"
        - name: KONG_NGINX_DAEMON
          value: "off"
        image: kong:2.1
        imagePullPolicy: IfNotPresent
        lifecycle:
          preStop:
            exec:
              command:
              - /bin/sh
              - -c
              - /bin/sleep 15 && kong quit
        livenessProbe:
          failureThreshold: 3
          httpGet:
            path: /status
            port: metrics
            scheme: HTTP
          initialDelaySeconds: 5
          periodSeconds: 10
          successThreshold: 1
          timeoutSeconds: 5
        name: proxy
        ports:
        - containerPort: 8001
          name: admin
          protocol: TCP
        - containerPort: 8000
          name: proxy
          protocol: TCP
        - containerPort: 8443
          name: proxy-tls
          protocol: TCP
        - containerPort: 9542
          name: metrics
          protocol: TCP
        readinessProbe:
          failureThreshold: 3
          httpGet:
            path: /status
            port: metrics
            scheme: HTTP
          initialDelaySeconds: 5
          periodSeconds: 10
          successThreshold: 1
          timeoutSeconds: 5
        resources:
          limits:
            cpu: 500m
            memory: 1Gi
        terminationMessagePath: /dev/termination-log
        terminationMessagePolicy: File
        volumeMounts:
        - mountPath: /usr/local/share/lua/5.1/kong/plugins/method-rewrite/handler.lua
          name: method-rewrite
          subPath: handler.lua
        - mountPath: /usr/local/share/lua/5.1/kong/plugins/method-rewrite/schema.lua
          name: method-rewrite
          subPath: schema.lua
        - mountPath: /usr/local/share/lua/5.1/kong/plugins/base64-decode/handler.lua
          name: base64-decode
          subPath: handler.lua
        - mountPath: /usr/local/share/lua/5.1/kong/plugins/base64-decode/schema.lua
          name: base64-decode
          subPath: schema.lua
        - mountPath: /usr/local/share/lua/5.1/kong/plugins/header-filter/handler.lua
          name: header-filter
          subPath: handler.lua
        - mountPath: /usr/local/share/lua/5.1/kong/plugins/header-filter/schema.lua
          name: header-filter
          subPath: schema.lua
        - mountPath: /kong_prefix/
          name: kong-kong-prefix-dir
        - mountPath: /tmp
          name: kong-kong-tmp
        - mountPath: /kong
          name: custom-nginx-template-volume
        - mountPath: /etc/kong/kong.conf
          name: kong-conf
          subPath: kong.conf
      dnsPolicy: ClusterFirst
      restartPolicy: Always
      schedulerName: default-scheduler
      securityContext:
        fsGroup: 0
        runAsUser: 0
      terminationGracePeriodSeconds: 30
      volumes:
      - configMap:
          defaultMode: 420
          items:
          - key: handler.lua
            path: handler.lua
          - key: schema.lua
            path: schema.lua
          name: method-rewrite
        name: method-rewrite
      - configMap:
          defaultMode: 420
          items:
          - key: handler.lua
            path: handler.lua
          - key: schema.lua
            path: schema.lua
          name: base64-decode
        name: base64-decode
      - configMap:
          defaultMode: 420
          items:
          - key: handler.lua
            path: handler.lua
          - key: schema.lua
            path: schema.lua
          name: header-filter
        name: header-filter
      - emptyDir: {}
        name: kong-kong-prefix-dir
      - emptyDir: {}
        name: kong-kong-tmp
      - configMap:
          defaultMode: 420
          name: kong-kong-default-custom-server-blocks
        name: custom-nginx-template-volume
      - configMap:
          defaultMode: 420
          items:
          - key: kong.conf
            path: kong.conf
          name: kong.conf
        name: kong-conf
