kong/konga_deployments.apps.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  annotations:
    deployment.kubernetes.io/revision: "1"
    kubectl.kubernetes.io/last-applied-configuration: |
      {"apiVersion":"apps/v1","kind":"Deployment","metadata":{"annotations":{},"name":"konga","namespace":"default"},"spec":{"replicas":1,"selector":{"matchLabels":{"app":"konga","name":"konga"}},"template":{"metadata":{"labels":{"app":"konga","name":"konga"}},"spec":{"containers":[{"env":[{"name":"DB_DATABASE","value":"kong"},{"name":"DB_USER","value":"kong"},{"name":"DB_PASSWORD","value":"kong"},{"name":"DB_PORT","value":"5432"},{"name":"DB_ADAPTER","value":"postgres"},{"name":"DB_HOST","value [...]
  generation: 1
  name: konga
  namespace: default
spec:
  progressDeadlineSeconds: 600
  replicas: 1
  revisionHistoryLimit: 10
  selector:
    matchLabels:
      app: konga
      name: konga
  strategy:
    rollingUpdate:
      maxSurge: 25%
      maxUnavailable: 25%
    type: RollingUpdate
  template:
    metadata:
      labels:
        app: konga
        name: konga
    spec:
      containers:
      - env:
        - name: DB_DATABASE
          value: kong
        - name: DB_USER
          value: kong
        - name: DB_PASSWORD
          value: kong
        - name: DB_PORT
          value: "5432"
        - name: DB_ADAPTER
          value: postgres
        - name: DB_HOST
          value: kong-postgresql
        image: pantsel/konga:0.14.1
        imagePullPolicy: IfNotPresent
        name: konga
        ports:
        - containerPort: 1337
          name: konga
          protocol: TCP
        resources:
          limits:
            cpu: 250m
            memory: 512Mi
          requests:
            cpu: 100m
            memory: 256Mi
        terminationMessagePath: /dev/termination-log
        terminationMessagePolicy: File
      dnsPolicy: ClusterFirst
      restartPolicy: Always
      schedulerName: default-scheduler
      securityContext: {}
      terminationGracePeriodSeconds: 30
status:
  availableReplicas: 1
  conditions:
  - lastTransitionTime: "2022-12-12T06:41:33Z"
    lastUpdateTime: "2022-12-12T06:42:07Z"
    message: ReplicaSet "konga-89c876bfb" has successfully progressed.
    reason: NewReplicaSetAvailable
    status: "True"
    type: Progressing
  - lastTransitionTime: "2023-11-23T03:45:50Z"
    lastUpdateTime: "2023-11-23T03:45:50Z"
    message: Deployment has minimum availability.
    reason: MinimumReplicasAvailable
    status: "True"
    type: Available
  observedGeneration: 1
  readyReplicas: 1
  replicas: 1
  updatedReplicas: 1
