kong/kong-kong-proxy_services.yaml
apiVersion: v1
kind: Service
metadata:
  annotations:
    meta.helm.sh/release-name: kong
    meta.helm.sh/release-namespace: default
  finalizers:
  - service.k8s.alibaba/resources
  labels:
    app.kubernetes.io/instance: kong
    app.kubernetes.io/managed-by: Helm
    app.kubernetes.io/name: kong
    app.kubernetes.io/version: "2.1"
    enable-metrics: "true"
    helm.sh/chart: kong-1.11.0
    service.k8s.alibaba/loadbalancer-id: lb-bp133716mdyepndhtr6f4
  name: kong-kong-proxy
  namespace: default
spec:
  allocateLoadBalancerNodePorts: true
  clusterIP: 172.16.222.76
  clusterIPs:
  - 172.16.222.76
  externalTrafficPolicy: Cluster
  internalTrafficPolicy: Cluster
  ipFamilies:
  - IPv4
  ipFamilyPolicy: SingleStack
  ports:
  - name: kong-proxy
    nodePort: 32575
    port: 80
    protocol: TCP
    targetPort: 8000
  - name: kong-proxy-tls
    nodePort: 30020
    port: 443
    protocol: TCP
    targetPort: 8443
  selector:
    app.kubernetes.io/component: app
    app.kubernetes.io/instance: kong
    app.kubernetes.io/name: kong
  sessionAffinity: None
  type: LoadBalancer
status:
  loadBalancer:
    ingress:
    - ip: 47.97.18.217
