kong/kong-postgresql_services.yaml
apiVersion: v1
kind: Service
metadata:
  annotations:
    meta.helm.sh/release-name: kong
    meta.helm.sh/release-namespace: default
  labels:
    app: postgresql
    app.kubernetes.io/managed-by: Helm
    chart: postgresql-8.6.8
    heritage: Helm
    release: kong
  name: kong-postgresql
  namespace: default
spec:
  ports:
  - name: tcp-postgresql
    port: 5432
    protocol: TCP
    targetPort: tcp-postgresql
  selector:
    app: postgresql
    release: kong
    role: master
  sessionAffinity: None
  type: ClusterIP
status:
  loadBalancer: {}
