kong/konga_services.yaml
apiVersion: v1
kind: Service
metadata:
  name: konga
  namespace: default
spec:
  ports:
  - name: konga
    port: 1337
    protocol: TCP
    targetPort: 1337
  selector:
    app: konga
  sessionAffinity: None
  type: ClusterIP
status:
  loadBalancer: {}
