kong/sit-konga_ingresses.networking.k8s.io.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  annotations:
    nginx.ingress.kubernetes.io/service-weight: ""
  name: sit-konga
  namespace: default
spec:
  ingressClassName: nginx
  rules:
  - host: default-konga.XXX.com
    http:
      paths:
      - backend:
          service:
            name: konga
            port:
              number: 1337
        path: /
        pathType: ImplementationSpecific
